[metadata]
name = py-wrappers
version = 0.1
classifiers =
    Development Status :: 1 - Development
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Environment :: Console

[options]
packages = find:
package_dir =
    = ./
python_requires = >=3.10

[options.packages.find]
where = ./
